--- a/app/src/main/res/layout/activity_weather.xml
+++ b/app/src/main/res/layout/activity_weather.xml
@@ -16,8 +16,8 @@
             android:orientation="vertical">
 
             <include layout="@layout/title"/>
+            <include layout="@layout/now"/>
             <include layout="@layout/forecast"/>
-            <include layout="@layout/aqi"/>
             <include layout="@layout/suggestion"/>
         </LinearLayout>
 
