--- a/app/src/main/res/layout/forecast.xml
+++ b/app/src/main/res/layout/forecast.xml
@@ -10,7 +10,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="15dp"
         android:layout_marginTop="15dp"
-        android:text="预报"
+        android:text="未来几天预报"
         android:textColor="#fff"
         android:textSize="20sp"/>
 
