--- a/app/src/main/res/layout/forecast_item.xml
+++ b/app/src/main/res/layout/forecast_item.xml
@@ -24,7 +24,17 @@
         />
 
     <TextView
-        android:id="@+id/max_text"
+        android:id="@+id/wind_text"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
+        android:layout_weight="1"
+        android:gravity="center"
+        android:textColor="#fff"
+        />
+
+    <TextView
+        android:id="@+id/temperature_text"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
@@ -33,14 +43,6 @@
         android:textColor="#fff"
         />
 
-    <TextView
-        android:id="@+id/min_text"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_weight="1"
-        android:gravity="right"
-        android:textColor="#fff"
-        />
+
 
 </LinearLayout>
