--- a/app/src/main/res/layout/now.xml
+++ b/app/src/main/res/layout/now.xml
@@ -1,8 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="15dp">
+    android:layout_margin="15dp"
+    android:id="@+id/now">
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/weather_text"
+        android:textColor="#fff"
+        android:textSize="60sp"/>
+
 
     <TextView
         android:layout_width="wrap_content"
@@ -10,7 +20,7 @@
         android:id="@+id/degree_text"
         android:layout_gravity="end"
         android:textColor="#fff"
-        android:textSize="60sp"/>
+        android:textSize="40sp"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -18,6 +28,8 @@
         android:id="@+id/weather_info_text"
         android:layout_gravity="end"
         android:textColor="#fff"
-        android:textSize="20sp"/>
+        android:textSize="20sp"
+
+        />
 
 </LinearLayout>
